tests/invalid/bytes_count_wrong_arg_type/main.py
def run_case() -> None:
    b: bytes = b"ababa"
    n: int = b.count(1)
    print(n)


if __name__ == "__main__":
    run_case()
